Fixed Thin Promos alignment bug

--- a/assets/less/main.less
+++ b/assets/less/main.less
@@ -1688,6 +1688,10 @@ Organisms
 				.ir();
 			}
 			
+			.vc_single_image-wrapper {
+				left: 0;
+			}
+			
 			img {
 				opacity: 0.2;
 				left: 0;
